--- a/sem-4-wordle/src/index.css
+++ b/sem-4-wordle/src/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 10px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -12,7 +12,7 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
@@ -42,6 +42,22 @@ header {
   width: 50px;
   border: 2px solid teal;
   margin: 3px;
+  text-transform: capitalize;
+  font-size: xx-large;
+  text-align: center;
+  font-weight: bold;
+}
+
+.correct {
+  background-color: green;
+}
+
+.incorrect {
+  background-color: grey;
+}
+
+.includes {
+  background-color: yellow;
 }
 
 .submit {
