--- a/sem-4-wordle/src/index.css
+++ b/sem-4-wordle/src/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 10px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -12,7 +12,7 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
 
@@ -22,7 +22,6 @@ header {
 
 #gameboard {
   display: flex;
-  border: 2px solid grey;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -34,7 +33,6 @@ header {
   display: flex;
   flex-direction: row;
   align-items: center;
-  border: 1px dashed green;
 }
 
 .letter {
@@ -60,8 +58,21 @@ header {
   background-color: yellow;
 }
 
+.invalid {
+  border: 5px red solid;
+}
+
 .submit {
   width: auto;
   height: 20px;
   margin-left: 30px;
+}
+
+#results {
+  text-align: center;
+  margin: 40px;
+}
+
+fieldset {
+  border: none;
 }
